classDiagram
    %% Auth infrastructure: primary adapter, secondary adapters, security, config, persistence.

    %% --- Primary adapter ---
    class AuthController {
        <<primaryAdapter>>
        +authenticateWithGoogle(xRequestID, xFlowID, GoogleAuthRequest) ResponseEntity~AuthResponse~
        +createUser(xRequestID, xFlowID, CreateUserRequest) ResponseEntity~UserCreatedResponse~
    }
    class AuthenticationMapper {
        <<mapper>>
    }
    class CreateUserMapper {
        <<mapper>>
    }

    %% --- Secondary adapters ---
    class GoogleAuthClientAdapter {
        <<secondaryAdapter>>
        +exchangeCodeForUserInfo(authorizationCode: String, redirectUri: String) Mono~GoogleUserInfo~
    }
    class JwtTokenGeneratorAdapter {
        <<secondaryAdapter>>
        +generateToken(claims: TokenClaims) String
        +createClaimsFromUser(user: User) TokenClaims
        +extractUserId(token: String) UUID
        +validateToken(token: String) TokenClaims
    }
    class UserRepositoryAdapter {
        <<secondaryAdapter>>
        +save(user: User) Mono~User~
        +findByAuthorizationId(authorizationId: String) Mono~User~
    }

    %% --- Ports (UserRepository is a domain secondary port, depicted here via its adapter) ---
    class GoogleAuthClient {
        <<secondaryPort>>
    }
    class TokenGenerator {
        <<secondaryPort>>
    }
    class UserRepository {
        <<secondaryPort>>
        +save(user: User) Mono~User~
        +findByAuthorizationId(authorizationId: String) Mono~User~
    }

    %% --- Security ---
    class JwtAuthenticationFilter {
        <<filter>>
        +doFilterInternal(request, response, filterChain) void
    }
    class TokenService {
        <<service>>
        +extractUserId(tokenHeader: String) UUID
        +isValidToken(tokenHeader: String) boolean
    }
    class JwtClaimsAdapter {
        <<security>>
        +toJwtClaims(claims: TokenClaims) Map
        +fromJwtClaims(jwtClaims: Map, issuedAt: Instant, expiresAt: Instant) TokenClaims
    }
    class AuthenticatedUserContext {
        <<requestScope>>
        +getUserId() UUID
        +setUserId(userId: UUID) void
    }

    %% --- Config ---
    class JwtProperties {
        -secret: String
        -expiration: long
    }
    class GoogleClientProperties {
        -clientId: String
        -clientSecret: String
        -redirectUri: String
    }
    class SecurityConfig {
        +jwtSigningKey(jwtProperties: JwtProperties) Key
    }
    class WebClientConfig {
        <<config>>
    }
    class RestTemplateConfig {
        <<config>>
    }

    %% --- Persistence ---
    class UserEntity {
        <<entity>>
        -version: Long
        -userId: UUID
        -token: String
        -email: String
        -name: String
        -createdAt: Instant
        -updatedAt: Instant
    }
    class JpaUserRepository {
        <<repository>>
    }

    %% --- Relationships ---
    AuthController ..> AuthenticationMapper : uses
    AuthController ..> CreateUserMapper : uses

    GoogleAuthClientAdapter ..|> GoogleAuthClient : implements
    GoogleAuthClientAdapter ..> GoogleClientProperties : uses
    GoogleAuthClientAdapter ..> WebClientConfig : uses

    JwtTokenGeneratorAdapter ..|> TokenGenerator : implements
    JwtTokenGeneratorAdapter ..> JwtProperties : uses
    JwtTokenGeneratorAdapter ..> JwtClaimsAdapter : uses

    UserRepositoryAdapter ..|> UserRepository : implements
    UserRepositoryAdapter --> JpaUserRepository : uses
    UserRepositoryAdapter --> UserEntity : maps

    TokenService --> TokenGenerator : uses
    JwtAuthenticationFilter --> TokenService : uses
    JwtAuthenticationFilter --> AuthenticatedUserContext : populates

    SecurityConfig --> JwtProperties : configures
    JpaUserRepository --> UserEntity : manages
